--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1525,107 +1525,107 @@ stories:
   domain: http://www.aspendailynews.com/
   link: https://www.aspendailynews.com/opinion/beautiful-but-missing-something/article_967fdb9e-2450-11ea-b058-3ff6a8e900b3.html
 images:
-- name: status-berlin-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
-- name: oldsmallboat-oldsmallboat-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dali-three.jpg
-- name: eduardo-eduardo-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alberto-giacometti.jpg
-- name: fence-mexico-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-alberto-giacometti.jpg
-- name: walled-garden-walled-garden-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-rainbow-festival.jpg
-- name: stalin-time-hollywood-sign-hills.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hollywood-sign-hills.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
-- name: fence-fence-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-clean-view.jpg
-- name: status-berlin-status-berlin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-rain.jpg
-- name: bf-skinner-surveillance-cameras_36569244062_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-cameras_36569244062_o.jpg
-- name: berlinwall-DSC-0084-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-color.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-bright-sand.jpg
-- name: stalin-time-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-broken-piano-street.jpg
-- name: copper-circuit-lighthouse_36679514616_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-lighthouse_36679514616_o.jpg
-- name: mosaic-face-mosaic-face-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-creativity.jpg
-- name: mosaic-face-mosaic-face-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crunch-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-- name: old-cabin-oldcabin-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-post-modern.jpg
-- name: old-church-oldchurch-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
-- name: christianity-christianity-under-construction-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-emily-carr.jpg
-- name: paris-paris-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smoking-cigarette.jpg
-- name: old-barn-old-barn-1500-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-matrix.jpg
-- name: death-valley-death-valley-national-park-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-matrix.jpg
-- name: statue-of-liberty-front-view-statueofliberty-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crunch-paper.jpg
-- name: la-muse-going-to-dowtown-los-angeles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-going-to-dowtown-los-angeles.jpg
-- name: nazi-invasion-old-building-phoenix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-phoenix.jpg
-- name: crow_far_away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_far_away.jpg
-- name: blossombar-blossombar-still-600.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still-600.png
-- name: mistywoods-babyfoot-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-bright-sand.jpg
-- name: stalin-time-christ-cross-chalice.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-christ-cross-chalice.jpg
-- name: razorcliff-razorcliff-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-cinnamon-rolls.jpg
-- name: bluelake-neo-instinct-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-00-00.jpg
-- name: rockingchair-face-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-alberto-giacometti.jpg
-- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-- name: lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
-- name: ellis-island-ellisisland-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
-- name: store-on-corner-oldcabin-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-cinnamon-rolls.jpg
-- name: cargo-ship-cargo-ship-on-sea-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kand-two.jpg
-- name: death-valley-death-valley-national-park-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alien-goggles.jpg
-- name: downtheline-downtheline-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smooth-ride.jpg
-- name: gypsymosaic-gypsy-eyes-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crabapple.jpg
-- name: copper-circuit-old-gas-station_36680991076_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-gas-station_36680991076_o.jpg
-- name: oldhouse-granaryfield-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-aqua.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
-- name: razorcliff-razorcliff-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-gan-vogh.jpg
-- name: old-granary-field-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-satan-red.jpg
-- name: old-door-lock-old-door-lock-2-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-pond.jpg
-- name: machine-road-machine-road-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colored-circuits.jpg
-- name: braceros-domingo-ulloa-dandelions-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dandelions-in-rocks.jpg
-- name: razorcliff-razorcliff-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-granite.jpg
-- name: braceros-domingo-ulloa-people-eating-canal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-people-eating-canal.jpg
+- name: berlinwall2-berlinwall-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-marcel-duchamp.jpg
+- name: crow-crow-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purple-pond.jpg
+- name: liberty-back-statue-liberty-back-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-dali.jpg
+- name: bf-skinner-train-small-town-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-small-town-station.jpg
+- name: downtown-los-angeles-downtown-la-mucha-mult.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-mucha-mult.JPG
+- name: eduardo-eduardo-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alien-goggles.jpg
+- name: lincoln-memorial-lincolnmemorial-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-hot-spicy.jpg
+- name: stories-new-57-64-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-57-64-800-500-0-max-0--5--5.jpg
+- name: ellis-island-ellis-island-room-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smoking-cigarette.jpg
+- name: bf-skinner-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-2.jpg
+- name: aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+- name: legal-statue-legalstatue-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-mucha-mult.jpg
+- name: containership-containership-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-plentiful.jpg
+- name: meadowbutterfly-meadow-butterfly-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-clean-view.jpg
+- name: abandonedbuildings_oily_mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_oily_mcoilface.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
+- name: stalin-time-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-flowers-diamon-creek.jpg
+- name: aws-s3-canyon-canyon-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still-1200.jpg
+- name: oldhouse-oldhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alien-goggles.jpg
+- name: server-cloud-server-racks-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-oily-mcoilface.jpg
+- name: wind-mills-windmills-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-gan-vogh.jpg
+- name: trucksilo-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-brush.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-jap-dys-1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-dys-1.JPG
+- name: capital-battle-capitolbattle-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-matrix.jpg
+- name: razorwire-DSC-0080-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
+- name: crow-crow-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-really-hot.jpg
+- name: liberty-back-statue-liberty-back-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-bright-sand.jpg
+- name: castle-wall-DSC-0067-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-space-pizza.JPG
+- name: mistywoods-babyfoot-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-granite.jpg
+- name: nyc-flag-nycflag-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-paper.jpg
+- name: stories-new-desert-dragon-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-desert-dragon-horiz-circuit.jpg
+- name: oldcabin-oldcabin-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-brush.jpg
+- name: bordercrossing-bordercrossing-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-dresden.jpg
+- name: beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+- name: oldhotel-oldhotel-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-constitution.jpg
+- name: oldhouse-granaryfield-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-clean-view.jpg
+- name: white-house-lawn-white-house-window-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-neo-instinct.jpg
+- name: crow-crow-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-monet-one.jpg
+- name: sand-hand-sand-hand-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crunch-paper.jpg
+- name: copper-circuit-castle-clouds-green-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-clouds-green-lawn.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-far-away.jpg
+- name: statue-of-liberty-front-view-statueofliberty-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-graham-sutherland.jpg
+- name: subway-subway-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crunch-paper.jpg
+- name: store-on-corner-oldcabin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-plentiful.jpg
+- name: dragon-desert-desert-dragon-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-internet-numbers.jpg
+- name: bf-skinner-hollywood-sign-with-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hollywood-sign-with-tower.jpg
+- name: aws-s3-stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-copper-circuit.jpg
+- name: windowmountain-window-mountain-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-plentiful.jpg
+- name: containership-containership-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-umberto-bocc.jpg
+- name: stories-new-54-32-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-54-32-800-500-0-max-0--5--1.jpg
+- name: san-francisco-street-view-san-francisco-street-view-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-aqua.jpg
 ---
 Southeast Regional Recreation Center.&nbsp;Marysville Considers Pet Law Changes.&nbsp;Brown Bears Remain In 1st After Series With Jets.&nbsp;Warren Police Present Families With Target Gift Cards.&nbsp;Cody Simpson's Sister Shoots Down Split Gossip.&nbsp;Rihanna Teases Fans About 'listening' To But 'refusing To Release' R9.&nbsp;Winners Announced In Inaugural Drone Competition.&nbsp;New Mexico's Oil Region Schools See More Enrollment Spikes.&nbsp;
